--- a/dippaxfc/pom.xml
+++ b/dippaxfc/pom.xml
@@ -15,10 +15,21 @@
 	</properties>
 
 	<dependencies>
+
+
+		<!-- Linking Backend Project -->
+		<dependency>
+			<groupId>com.ss</groupId>
+			<artifactId>dippax</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
+
+      <!-- JUNIT VERSION -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
+			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
 
