--- a/dippaxfc/pom.xml
+++ b/dippaxfc/pom.xml
@@ -25,7 +25,7 @@
 		</dependency>
 
 
-      <!-- JUNIT VERSION -->
+		<!-- JUNIT VERSION -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -54,6 +54,16 @@
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
+
+		<!-- Spring WebFlow -->
+		<dependency>
+			<groupId>org.springframework.webflow</groupId>
+			<artifactId>spring-webflow</artifactId>
+			<version>2.5.0.RELEASE</version>
+		</dependency>
+
+
+
 
 	</dependencies>
 
