--- a/dippax/pom.xml
+++ b/dippax/pom.xml
@@ -14,7 +14,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <spring.version>4.3.6.RELEASE</spring.version>
     <hibernate.version>5.2.7.FINAL</hibernate.version>
-   
+   <jackson.version>2.8.7</jackson.version>
   </properties>
 
   <dependencies>
@@ -78,17 +78,18 @@
 			<version>2.1.1</version>
 		</dependency>
 		
-		<!-- SLF4J Logging -->
+		
+		<!-- JACKSON -->
 		<dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-classic</artifactId>
-			<version>1.2.1</version>
-		</dependency>	
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
 		
 		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>jcl-over-slf4j</artifactId>
-			<version>1.7.24</version>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>${jackson.version}</version>
 		</dependency>
 		
 		
